--- a/locales/ko.json
+++ b/locales/ko.json
@@ -1,6 +1,38 @@
 {
-    "welcome": "환영합니다.",
-    "vi_header_p": "ARK WITH GLOBAL 은 효율적은 어쩌구저쩌구를 제공하고 어쩌구저쩌구..",
-    "production_swiper_global_network_p": "우리의 글로벌 오피스는.. 어쩌구 ",
-    "description": "This is an example of multi-language support."
+    "vi_header_p": "ARK WITH GLOBAL은 제품 제작부터 최종 고객에게 배송까지 <br>효율적이고 통합된 서비스를 제공합니다.",
+    "production_swiper_global_network_p": "저희 글로벌 오피스 네트워크는 생산 과정을 효율적으로 관리하여 <br>고객님의 시간과 노력을 절약해 드립니다.",
+    "production_swiper_entire_process_p":"저희 수출입 화물 전문가들이 고객님의 소중한 화물을 안전하게 <br>운송하여, 전 과정에서 믿을 수 있는 서비스를 제공하고 안심할 수<br> 있도록 도와드립니다.",
+    "production_swiper_experience_p":"저희는 제품 개발부터 디자인, 생산, 포장까지 모든 단계에서<br> 고객님과 함께 긴밀히 협력합니다.",
+    "logistics_swiper_slide_1_p":"저희는 현지 운송 업체와 협력하여 해상, 항공, 육상 운송을 포함한 <br>국내외 전반적인 운송 서비스를 제공합니다.",
+    "logistics_swiper_slide_2_p":"We partner with local forwarding companies to deliver comprehensive international and domestic transportation solutions, including ocean freight, air freight, and ground trucking services.",
+    
+    
+    "fullfillment_new_3pl_benefits_dd":"3자 물류 서비스 (3PL) 는 판매자가 복잡한 재고 관리와 배송, 고객 관리 <br>업무를 대신 처리해 줌으로써 더 빠르게 비즈니스를 성장시킬 수 있도록 <br>도와줍니다.",
+
+    "fullfillment_new_fullfillment_span":"신속하고 정확한 주문 이행",
+    "fullfillment_new_3pl_order_fullfillment_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>고객님들의 판매와 성장에만 집중하실 수 있도록 저희가 모든 배송과 운송을 처리해 드립니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
+    "fullfillment_new_integration_span":"통합 솔루션",
+    "fullfillment_new_3pl_integration_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>고저희 주문 처리 소프트웨어는 고객님의 판매 채널과 손쉽게 연동되어 주문과 재고 등 모든 데이터를 효율적으로 관리할 수 있습니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
+    "fullfillment_new_b2b_fullfillment_span":"맞춤형 B2B 주문 처리 서비스",
+    
+    "fullfillment_new_3pl_b2b_fullfillment_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>저희 B2B 주문 처리 서비스는 EDI 연동된 소매 주문과 수동 도매 주문을 모두 쉽게 관리할 수 있도록 지원합니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
+    "fullfillment_new_returns_customer_support_span":"반품 처리와 고객 지원 서비스",
+    "fullfillment_new_3pl_returns_customer_support_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>저희 전담 고객 지원팀이 고객 문의와 반품 처리를 더욱 간편하고 비용 효율적으로 해드립니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
+    "fullfillment_new_custom_shipping_supplies_span":"CUSTOM SHIPPING SUPPLIES",
+    "fullfillment_new_3pl_customer_shipping_supplies_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>브랜드 로고가 포함된 맞춤 포장의 서비스를 제공해 드립니다. 로고가 인쇄된 배송 상자, 버블 메일러, 박스 테이프 뿐만 아니라 명함과 홍보물도 가능합니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
+
+    "metrics_our_metrics_tell_the_story_p":"저희의 지표 시스템은 비즈니스 성과를 한눈에 파악할 수 있게 해주어, 고객님의 성공을 계속 이어갈 수 있도록 도와드립니다.",
+    "metrics_global_office_network_p":"미국, 중국, 한국에 위치한 ARK 는 고객님의 필요를 충족하고 비용을 절감할 수 있도록 도와드립니다.",
+    "metrics_teams_of_specialists_p":"저희는 디자인, 생산, 물류, 주문 처리, 소프트웨어 및 웹 개발 전문가들이 함께 협력하여 고객님의 업무 효율을 최적화해 드립니다.",
+    "metrics_extensive_experience_knowledge_p":"10년 넘는 경험으로 쌓아온 전문 지식과 노하우를 제공합니다.",
+    "metrics_a_wide_range_of_products_p":"저희는 철저한 관리와 강력한 인프라로 생산된 다양한 고품질의 제품을 제공합니다.",
+
+    "wms_software_p":"All-In-One Management System. <br>Our comprehensive management software enables you to oversee the entire process, <br>from manufacturing your products to fulfilling your orders.",
+    "wms_production_management_p":"From the early stage of product development, our software stores critical information to ensure the timely and quality production of your products.",
+    "wms_inbound_outbound_management_p":"Our management system helps you track your products from the manufacturer to the warehouse and to the customers.",
+    "wms_order_inventory_management_p":"Integrating our system with your marketplaces will expedite order fulfillment and minimize inventory errors.",
+    "wms_reporting_p":"Our management software collects, organizes, and carefully analyzes a wealth of data to generate comprehensive reports, providing valuable insights for assessing and enhancing your business operations.",
+
+    "omnichannel_fullfillment_software_features_p":"ARK empowers your brand to execute enterprise-class fulfillment operations.",
+    "services_4_in_1_cloud_based_software_p":"3PL Partners Can Provide All of the Following:"
 }
