Before how it works start.

--- a/locales/en.json
+++ b/locales/en.json
@@ -19,7 +19,7 @@
     "fullfillment_new_returns_customer_support_span":"RETURNS & CUSTOMER SUPPORT",
     "fullfillment_new_3pl_returns_customer_support_p":"Dealing with customer inquiries and returned orders can be made easier and more cost effective with help of our dedicated customer support team.",
     "fullfillment_new_custom_shipping_supplies_span":"CUSTOM SHIPPING SUPPLIES",
-    "fullfillment_new_3pl_customer_shipping_supplies_p":"Elevate your customer experience with personalized packaging featuring your brand logo. Our custom shipping supplies include branded shipping boxes, bubble mailers, and box tape, with the option to include your business card and promotional inserts.",
+    "fullfillment_new_3pl_customer_shipping_supplies_p":"Elevate your customer experience with branded packaging, including shipping boxes, bubble mailers, and packing tape, along with options for business cards and promotional inserts.",
 
     "metrics_our_metrics_tell_the_story_p":"Our metrics component gives you the inside scoop on your success and helps you stay on top of your game in style.",
     "metrics_global_office_network_p":"Strategically positioned offices in the USA, China, and Korea to meet your needs and maximize cost-efficiency",
