--- a/locales/en.json
+++ b/locales/en.json
@@ -47,11 +47,11 @@
     "howitworks_li_2_h3":"Can I improve the quality and lower the cost of my products?",
     "howitworks_li_2_p":"With our East Asia branch in China, we provide prompt and accurate consultation and services for sampling, production, and quality control.",
 
-    "howitworks_li_3_h2":"How can I efficiently bring my product from the factories abroad? What about the customs?",
+    "howitworks_li_3_h2":"How can I bring my product from overseas factories? And customs?",
     "howitworks_li_3_h3":"International trade is too complicated and challenging.",
     "howitworks_li_3_p":"Based on the delivery schedule of each finished product, our Logistics team provides fast and transparent services for all trade-related tasks, including Ocean & Air freight, Cutoms, FDA Processing, and Delivery.",
 
-    "howitworks_li_4_h2":"I don't have either a warehouse or a system. What should I do?",
+    "howitworks_li_4_h2":"I have no warehouse or system. What should I do?",
     "howitworks_li_4_h3":"Through ARK WITH warehouses in the USA, China, and Korea, we offer global fulfillment services.",
     "howitworks_li_4_p":"Our innovative order management and inventory systems allow real-time management for fulfillment services.",
 
