--- a/locales/ko.json
+++ b/locales/ko.json
@@ -15,7 +15,7 @@
     "fullfillment_new_fullfillment_span":"신속하고 정확한 주문 이행",
     "fullfillment_new_3pl_order_fullfillment_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>고객님들의 판매와 성장에만 집중하실 수 있도록 저희가 모든 배송과 운송을 처리해 드립니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
     "fullfillment_new_integration_span":"통합 솔루션",
-    "fullfillment_new_3pl_integration_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>고저희 주문 처리 소프트웨어는 고객님의 판매 채널과 손쉽게 연동되어 주문과 재고 등 모든 데이터를 효율적으로 관리할 수 있습니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
+    "fullfillment_new_3pl_integration_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>저희 주문 처리 소프트웨어는 고객님의 판매 채널과 손쉽게 연동되어 주문과 재고 등 모든 데이터를 효율적으로 관리할 수 있습니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
     "fullfillment_new_b2b_fullfillment_span":"맞춤형 B2B 주문 처리 서비스",
 
     "fullfillment_new_3pl_b2b_fullfillment_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>저희 B2B 주문 처리 서비스는 EDI 연동된 소매 주문과 수동 도매 주문을 모두 쉽게 관리할 수 있도록 지원합니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
