--- a/locales/ko.json
+++ b/locales/ko.json
@@ -1,8 +1,8 @@
 {
-    "vi_header_p": "ARK WITH GLOBAL은 제품 제작부터 최종 고객에게 배송까지 <br>효율적이고 통합된 서비스를 제공합니다.",
-    "production_swiper_global_network_p": "저희 글로벌 오피스 네트워크는 생산 과정을 효율적으로 관리하여 <br>고객님의 시간과 노력을 절약해 드립니다.",
-    "production_swiper_entire_process_p":"저희 수출입 화물 전문가들이 고객님의 소중한 화물을 안전하게 <br>운송하여, 전 과정에서 믿을 수 있는 서비스를 제공하고 안심할 수<br> 있도록 도와드립니다.",
-    "production_swiper_experience_p":"저희는 제품 개발부터 디자인, 생산, 포장까지 모든 단계에서<br> 고객님과 함께 긴밀히 협력합니다.",
+    "vi_header_p": "ARK WITH GLOBAL은 제품 제작부터 최종 고객에게 배송까지 효율적이고 통합된 서비스를 제공합니다.",
+    "production_swiper_global_network_p": "저희 글로벌 오피스 네트워크는 생산 과정을 효율적으로 관리하여 고객님의 시간과 노력을 절약해 드립니다.",
+    "production_swiper_entire_process_p":"저희 수출입 화물 전문가들이 고객님의 소중한 화물을 안전하게 운송하여, 전 과정에서 믿을 수 있는 서비스를 제공하고 안심할 수<br> 있도록 도와드립니다.",
+    "production_swiper_experience_p":"저희는 제품 개발부터 디자인, 생산, 포장까지 모든 단계에서 고객님과 함께 긴밀히 협력합니다.",
 
     "logistics_swiper_slide_1_h3":"국제 화물 운송 서비스",
     "logistics_swiper_slide_1_p":"저희 수출입 화물 전문가들이 고객님의 소중한 화물을 안전하게 운송하여, 전 과정에서 믿을 수 있는 서비스를 제공하고 안심할 수 있도록 도와드립니다.",
@@ -10,7 +10,7 @@
     "logistics_swiper_slide_2_p":"저희는 현지 운송 업체와 협력하여 해상, 항공, 육상 운송을 포함한 국내외 전반적인 운송 서비스를 제공합니다.",
     
     
-    "fullfillment_new_3pl_benefits_dd":"3자 물류 서비스 (3PL) 는 판매자가 복잡한 재고 관리와 배송, 고객 관리 <br>업무를 대신 처리해 줌으로써 더 빠르게 비즈니스를 성장시킬 수 있도록 <br>도와줍니다.",
+    "fullfillment_new_3pl_benefits_dd":"3자 물류 서비스 (3PL) 는 판매자가 복잡한 재고 관리와 배송, 고객 관리 업무를 대신 처리해 줌으로써 더 빠르게 비즈니스를 성장시킬 수 있도록 도와줍니다.",
 
     "fullfillment_new_fullfillment_span":"신속하고 정확한 주문 이행",
     "fullfillment_new_3pl_order_fullfillment_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>고객님들의 판매와 성장에만 집중하실 수 있도록 저희가 모든 배송과 운송을 처리해 드립니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
