--- a/locales/ko.json
+++ b/locales/ko.json
@@ -1,7 +1,7 @@
 {
     "vi_header_p": "ARK WITH GLOBAL은 제품 제작부터 최종 고객에게 배송까지 효율적이고 통합된 서비스를 제공합니다.",
     "production_swiper_global_network_p": "저희 글로벌 오피스 네트워크는 생산 과정을 효율적으로 관리하여 고객님의 시간과 노력을 절약해 드립니다.",
-    "production_swiper_entire_process_p":"저희 수출입 화물 전문가들이 고객님의 소중한 화물을 안전하게 운송하여, 전 과정에서 믿을 수 있는 서비스를 제공하고 안심할 수<br> 있도록 도와드립니다.",
+    "production_swiper_entire_process_p":"저희 수출입 화물 전문가들이 고객님의 소중한 화물을 안전하게 운송하여, 전 과정에서 믿을 수 있는 서비스를 제공하고 안심할 수 있도록 도와드립니다.",
     "production_swiper_experience_p":"저희는 제품 개발부터 디자인, 생산, 포장까지 모든 단계에서 고객님과 함께 긴밀히 협력합니다.",
 
     "logistics_swiper_slide_1_h3":"국제 화물 운송 서비스",
@@ -21,7 +21,7 @@
     "fullfillment_new_3pl_b2b_fullfillment_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>저희 B2B 주문 처리 서비스는 EDI 연동된 소매 주문과 수동 도매 주문을 모두 쉽게 관리할 수 있도록 지원합니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
     "fullfillment_new_returns_customer_support_span":"반품 처리와 고객 지원 서비스",
     "fullfillment_new_3pl_returns_customer_support_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>저희 전담 고객 지원팀이 고객 문의와 반품 처리를 더욱 간편하고 비용 효율적으로 해드립니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
-    "fullfillment_new_custom_shipping_supplies_span":"CUSTOM SHIPPING SUPPLIES",
+    "fullfillment_new_custom_shipping_supplies_span":"고객 맞춤형 배송 포장 용품",
     "fullfillment_new_3pl_customer_shipping_supplies_p":"<lang-ko-quot-begin>“</lang-ko-quot-begin><br><lang-ko>브랜드 로고가 포함된 맞춤 포장의 서비스를 제공해 드립니다. 로고가 인쇄된 배송 상자, 버블 메일러, 박스 테이프 뿐만 아니라 명함과 홍보물도 가능합니다.</lang-ko><br> <lang-ko-quot-end>”</lang-ko-quot-end>",
 
     "metrics_our_metrics_tell_the_story_p":"저희의 지표 시스템은 비즈니스 성과를 한눈에 파악할 수 있게 해주어, 고객님의 성공을 계속 이어갈 수 있도록 도와드립니다.",
