--- a/locales/zh.json
+++ b/locales/zh.json
@@ -12,16 +12,16 @@
     
     "fullfillment_new_3pl_benefits_dd":"第三方物流（3PL）帮助各种规模的商家快速发展，将通过多渠道订单履行、库存管理和售后服务等复杂工作委托给专业团队来处理。",
 
-    "fullfillment_new_fullfillment_span":"ORDER FULFILLMENT",
+    "fullfillment_new_fullfillment_span":"快速且准确的订单执行",
     "fullfillment_new_3pl_order_fullfillment_p":"<lang-zh-quot-begin>“</lang-zh-quot-begin><br><lang-zh>我们为您处理所有运输和配送，让您可以专注于销售和业务发展。</lang-zh><br> <lang-zh-quot-end>”</lang-zh-quot-end>",
-    "fullfillment_new_integration_span":"INTEGRATION",
+    "fullfillment_new_integration_span":"综合解决方案",
     "fullfillment_new_3pl_integration_p":"<lang-zh-quot-begin>“</lang-zh-quot-begin><br><lang-zh>我们的履行软件与您的销售渠道轻松集成，实时同步订单、库存等数据。</lang-zh><br> <lang-zh-quot-end>”</lang-zh-quot-end>",
-    "fullfillment_new_b2b_fullfillment_span":"B2B FULFILLMENT",
+    "fullfillment_new_b2b_fullfillment_span":"定制化B2B订单处理服务",
 
     "fullfillment_new_3pl_b2b_fullfillment_p":"<lang-zh-quot-begin>“</lang-zh-quot-begin><br><lang-zh>我们的B2B履行服务可以帮助您同时管理EDI系统的零售订单和手动批发订单。</lang-zh><br> <lang-zh-quot-end>”</lang-zh-quot-end>",
-    "fullfillment_new_returns_customer_support_span":"RETURNS & CUSTOMER SUPPORT",
+    "fullfillment_new_returns_customer_support_span":"退货处理和客户支持服务",
     "fullfillment_new_3pl_returns_customer_support_p":"<lang-zh-quot-begin>“</lang-zh-quot-begin><br><lang-zh>有了我们专门的客户支持团队，处理客户咨询和退货订单会变得更加简单和省钱。</lang-zh><br> <lang-zh-quot-end>”</lang-zh-quot-end>",
-    "fullfillment_new_custom_shipping_supplies_span":"CUSTOM SHIPPING SUPPLIES",
+    "fullfillment_new_custom_shipping_supplies_span":"定制化运输供应品",
     "fullfillment_new_3pl_customer_shipping_supplies_p":"<lang-zh-quot-begin>“</lang-zh-quot-begin><br><lang-zh>用印有您品牌标志的个性化包装来提升客户体验。我们的定制包装材料包括品牌运输箱、气泡信封和胶带，还可以放入您的名片和宣传单。</lang-zh><br> <lang-zh-quot-end>”</lang-zh-quot-end>",
 
     "metrics_our_metrics_tell_the_story_p":"我们的数据指标为您提供成功的关键信息，帮助您始终保持卓越表现。",
